--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Sikha Pentyala PhD Student at UW Tacoma</title>
+		<title>Sikha Pentyala PostDoctoral Researcher@UW</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -32,7 +32,7 @@
 										<h3 class="profileName">
 											<strong>Sikha Pentyala</strong><br />
 										</h3>
-										<span class="education">Computer Science PhD Student @ University of Washington Tacoma </span>
+										<span class="education">PostDoctoral Researcher @ UW</span>
 										<span>
 											<strong>Research Interest:</strong> Responsible AI - Privacy, Fairness and Interpretability in Machine Learning
 										</span>
@@ -264,5 +264,6 @@ Prior to starting my PhD in 2022, I earned my Masters in Computer Science & Syst
 			<script src="https://kit.fontawesome.com/a39ecd9ced.js" crossorigin="anonymous"></script>
 	</body>
 </html>
+
 
 
