--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 										<h3 class="profileName">
 											<strong>Sikha Pentyala</strong><br />
 										</h3>
-										<span class="education">PostDoctoral Researcher @ UW</span>
+										<span class="education">PostDoctoral Researcher @ UW | Data Science Postdoctoral Fellow @ eScience Institute</span>
 										<span>
 											<strong>Research Interest:</strong> Responsible AI - Privacy, Fairness and Interpretability in Machine Learning
 										</span>
@@ -264,6 +264,7 @@ Prior to starting my PhD in 2022, I earned my Masters in Computer Science & Syst
 			<script src="https://kit.fontawesome.com/a39ecd9ced.js" crossorigin="anonymous"></script>
 	</body>
 </html>
+
 
 
 
