--- a/mlevals/week1.html
+++ b/mlevals/week1.html
@@ -117,10 +117,26 @@
                     <td id="conscientious">0.73</td>
                 </tr>
     
-                <tr class="ensemble">
-                    <td>Ensemble</td>
-                <td>0.000</td><td>0.000</td><td>0.000</td><td>0.000</td><td>0.000</td><td>0.000</td><td>0.000</td></tr><tr><td>Team 1</td><td>0.590</td><td>0.590</td><td>0.650</td><td>0.800</td><td>0.790</td><td>0.670</td><td>3.520</td></tr><tr><td>Team 11</td><td colspan="7" class="error">Error: No XML files found</td></tr><tr><td>Team 2</td><td colspan="7" class="error">Error: No XML files found</td></tr><tr><td>Team 3</td><td colspan="7" class="error">Error: No XML files found</td></tr><tr><td>Team 4</td><td>0.590</td><td>0.590</td><td>0.650</td><td>0.800</td><td>0.790</td><td>0.670</td><td>0.730</td></tr><tr><td>Team 5</td><td colspan="7" class="error">Error: No XML files found</td></tr><tr><td>Team 6</td><td colspan="7" class="error">Error: No XML files found</td></tr><tr><td>Team 7</td><td>0.590</td><td>0.590</td><td>0.650</td><td>0.800</td><td>0.790</td><td>0.670</td><td>0.730</td></tr><tr><td>Team 8</td><td colspan="7" class="error">Error: No XML files found</td></tr>
-            </table>
+               <tr class="ensemble">
+     <td>Ensemble</td><td>0.000</td><td>0.000</td><td>0.000</td><td>0.000</td><td>0.000</td><td>0.000</td><td>0.000</td>
+
+</tr><tr><td>Team 1</td><td>0.590</td><td>0.590</td><td>0.650</td><td>0.800</td><td>0.790</td><td>0.670</td><td>3.520</td></tr>
+
+<tr><td>Team 2</td><td>0.590</td><td>0.590</td><td>3.96</td><td>2.83</td><td>3.610</td><td>3.670</td><td>3.520</td></tr>
+
+<tr><td>Team 3</td><td>0.590</td><td>0.590</td><td>0.650</td><td>0.800</td><td>0.790</td><td>0.670</td><td>0.730</td></tr>
+
+<tr><td>Team 4</td><td>0.590</td><td>0.590</td><td>0.650</td><td>0.800</td><td>0.790</td><td>0.670</td><td>0.730</td></tr>
+
+<tr><td>Team 5</td><td colspan="7" class="error">Error: No .xml files were found in output data directory "xxx/output/555team5/data</td></tr>
+
+<tr><td>Team 6</td><td colspan="7" class="error">Error: No .xml files were found in output data directory "xxx/output/555team6/data</td></tr>
+
+<tr><td>Team 7</td><td>0.590</td><td>0.590</td><td>0.650</td><td>0.800</td><td>0.790</td><td>0.670</td><td>0.730</td></tr>
+
+<tr><td>Team 8</td><td colspan="7" class="error">Error: No .xml files were found in output data directory "xxx/output/555team8/data</td></tr>
+
+</table>
             <div class="footer">
                 © University of Washington
             </div>
