--- a/mlevals/555eval_test.html
+++ b/mlevals/555eval_test.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TCSS55 Evaluation</title>
+    <title>Weekly Content Hub</title>
     <style>
         * {
             margin: 0;
@@ -144,7 +144,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>🤖 TCSS55 Evaluation</h1>
+            <h1>🤖 ML Evaluations</h1>
             <p class="subtitle">Select a week to view evaluation results</p>
         </header>
 
@@ -161,7 +161,7 @@
 
     <script>
         // Set the default week to load on page load (1-11)
-        const DEFAULT_WEEK = 1;
+        const DEFAULT_WEEK = 11;
         
         let currentWeek = null;
 
@@ -202,7 +202,7 @@
                             <h2>Week ${weekNum}</h2>
                         </div>
                         <div class="content-body">
-                            ${html}
+                            <iframe srcdoc="${html.replace(/"/g, '&quot;')}" style="width: 100%; min-height: 800px; border: none; background: white;"></iframe>
                         </div>
                     `;
                 })
