Update and rename 555eval_test.html to 555wklyeval.html

--- a/mlevals/555wklyeval.html
+++ b/mlevals/555wklyeval.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weekly Content Hub</title>
+    <title>TCSS 555 Project Evaluations</title>
     <style>
         * {
             margin: 0;
@@ -144,7 +144,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>🤖 ML Evaluations</h1>
+            <h1>🤖 TCSS 555 Project Evaluations</h1>
             <p class="subtitle">Select a week to view evaluation results</p>
         </header>
 
@@ -161,7 +161,7 @@
 
     <script>
         // Set the default week to load on page load (1-11)
-        const DEFAULT_WEEK = 11;
+        const DEFAULT_WEEK = 1;
         
         let currentWeek = null;
 
