--- a/mlevals/555wklyeval.html
+++ b/mlevals/555wklyeval.html
@@ -144,7 +144,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>🤖 TCSS 555 Project Evaluations</h1>
+            <h1>🤖 TCSS 555 Project Weekly Evaluations</h1>
             <p class="subtitle">Select a week to view evaluation results</p>
         </header>
 
