--- a/mlevals/week1.html
+++ b/mlevals/week1.html
@@ -117,10 +117,9 @@
                     <td id="conscientious">0.73</td>
                 </tr>
     
-               <tr class="ensemble">
-     <td>Ensemble</td><td>0.000</td><td>0.000</td><td>0.000</td><td>0.000</td><td>0.000</td><td>0.000</td><td>0.000</td>
-
-</tr><tr><td>Team 1</td><td>0.590</td><td>0.590</td><td>0.650</td><td>0.800</td><td>0.790</td><td>0.670</td><td>3.520</td></tr>
+               <tr class="ensemble"><td>Ensemble</td><td colspan="7" TBD </td></tr>
+                
+<tr><td>Team 1</td><td>0.590</td><td>0.590</td><td>0.650</td><td>0.800</td><td>0.790</td><td>0.670</td><td>3.520</td></tr>
 
 <tr><td>Team 2</td><td>0.590</td><td>0.590</td><td>3.96</td><td>2.83</td><td>3.610</td><td>3.670</td><td>3.520</td></tr>
 
