Update and rename week1.html to week2.html

--- a/mlevals/week2.html
+++ b/mlevals/week2.html
@@ -93,7 +93,7 @@
             <div class="header">
                 <div class="uw-logo">UNIVERSITY OF WASHINGTON</div>
                 <h2>Team Results</h2>
-                <div class="week-number">Week 1</div>
+                <div class="week-number">Week 2</div>
             </div>
             <table>
                 <tr>
@@ -129,7 +129,7 @@
 
 <tr><td>Team 5</td><td>0.590</td><td>0.590</td><td>0.650</td><td>0.800</td><td>0.790</td><td>0.670</td><td>0.730</td></tr>
 
-<tr><td>Team 6</td><td colspan="7" class="error">Error: No .xml files were found in output data directory "xxx/output/555team6/data</td></tr>
+<tr><td>Team 6</td><td>0.200</td><td>0.000</td><td>0.650</td><td>0.800</td><td>0.790</td><td>0.670</td><td>0.730</td></tr>
 
 <tr><td>Team 7</td><td>0.590</td><td>0.590</td><td>0.650</td><td>0.800</td><td>0.790</td><td>0.670</td><td>0.730</td></tr>
 
