--- a/mlevals/week3.html
+++ b/mlevals/week3.html
@@ -119,13 +119,13 @@
     
                <tr class="ensemble"><td>Ensemble</td><td colspan="7" TBD </td></tr>
                 
-<tr><td>Team 1</td><td colspan="7" class="error">Error: No .xml files were found in output data directory "xxx/output/555team8/data</td></tr>
+<tr><td>Team 1</td><td colspan="7" class="error">Error: python3: can't open file 'xxx/itadmin/model.py': [Errno 2] No such file or directory</td></tr>
 
-<tr><td>Team 2</td><td colspan="7" class="error">Error: No .xml files were found in output data directory "xxx/output/555team8/data</td></tr>
+<tr><td>Team 2</td><td colspan="7" class="error">Error: FileNotFoundError: [Errno 2] No such file or directory: 'training\relation\relation.csv (+Import Error for Numpy)</td></tr>
 
 <tr><td>Team 3</td><td>0.590</td><td>0.590</td><td>0.650</td><td>0.800</td><td>0.790</td><td>0.670</td><td>0.730</td></tr>
 
-<tr><td>Team 4</td><td colspan="7" class="error">Error: No .xml files were found in output data directory "xxx/output/555team8/data</td></tr>
+<tr><td>Team 4</td><td colspan="7" class="error">Error: FileNotFoundError: [Errno 2] No such file or directory: 'model.pkl'</td></tr>
 
 <tr><td>Team 5</td><td>0.590</td><td>0.590</td><td>0.650</td><td>0.800</td><td>0.790</td><td>0.670</td><td>0.730</td></tr>
 
