--- a/mlevals/week4.html
+++ b/mlevals/week4.html
@@ -127,10 +127,10 @@
 
 <tr><td>Team 4</td><td>0.590</td><td><strong>0.790</strong></td><td>0.650</td><td>0.800</td><td>0.790</td><td>0.670</td><td>0.730</td></tr>
 
-<tr><td>Team 5</td><td style="color: red;"> 0.390 </td><td>0.610</td><td><strong>0.670</strong></td><td><strong>0.850</strong></td><td><strong>0.820</strong></td><td><strong>0.700</strong></td><td><strong>0.770</strong></td></tr>
+<tr><td>Team 5</td><td style="color: red;"> 0.390 </td><td>0.610</td><td style="color: red;">0.670</td><td style="color: red;">0.850</td><td style="color: red;">0.820</td><td style="color: red;">0.700</td><td style="color: red;">0.770</td></tr>
 <tr><td>Team 6</td><td>0.590</td><td>0.590</td><td>0.650</td><td>0.800</td><td>0.790</td><td>0.670</td><td>0.730</td></tr>
 
-<tr><td>Team 7</td><td style="color: red;"> 0.470</td><td>0.670</td><td>0.640</td><td>0.790</td><td>0.790</td><td>0.650</td><td>0.720</td></tr>
+<tr><td>Team 7</td><td style="color: red;"> 0.470</td><td>0.670</td><td><strong>0.640</strong></td><td><strong>0.790</strong></td><td>0.790</td><td><strong>0.650</strong></td><td><strong>0.720</strong></td></tr>
 <tr><td>Team 8</td><td colspan="7" class="error">Error: No .xml files were found in output data directory "xxx/output/555team8/data</td></tr>
 
 </table>
