--- a/mlevals/week4.html
+++ b/mlevals/week4.html
@@ -123,7 +123,7 @@
 
 <tr><td>Team 2</td><td colspan="7" class="error">Error: FileNotFoundError: [Errno 2] No such file or directory: 'xxx/itadmin/relational_model.py (+Import Error from importlib)</td></tr>
 
-<tr><td>Team 3</td><td>0.590</td><td><strong>0.750</strong></td><td>0.650</td><td>0.800</td><td>0.790</td><td>0.670</td><td>0.730</td></tr>
+<tr><td>Team 3</td><td>0.590</td><td>0.750</td><td>0.650</td><td>0.800</td><td>0.790</td><td>0.670</td><td>0.730</td></tr>
 
 <tr><td>Team 4</td><td>0.590</td><td><strong>0.790</strong></td><td>0.650</td><td>0.800</td><td>0.790</td><td>0.670</td><td>0.730</td></tr>
 
