--- a/mlevals/week5.html
+++ b/mlevals/week5.html
@@ -117,7 +117,9 @@
                     <td id="conscientious">0.73</td>
                 </tr>
     
-               <tr class="ensemble"><td>Ensemble</td><td colspan="7" TBD </td></tr>
+              <tr class="ensemble">
+                    <td>Ensemble</td>
+                <td>0.635</td><td>0.722</td><td>0.659</td><td>0.880</td><td>0.806</td><td>0.787</td><td>0.821</td></tr>
                 
 <tr><td>Team 1</td><td>0.590</td><td>0.550</td><td>0.650</td><td>0.800</td><td>0.790</td><td>0.670</td><td>0.730</td></tr>
 
