--- a/mlevals/week10.html
+++ b/mlevals/week10.html
@@ -103,6 +103,41 @@
                 <div class="week-number">Week 10</div>
             </div>
 
+
+                <table>
+                <tr class="day"><td colspan="8"> Dec 3</td></tr>
+                <tr>
+                    <th>Team</th>
+                    <th>Age Accuracy</th>
+                    <th>Gender Accuracy</th>
+                    <th>OPN RMSE</th>
+                    <th>NEU RMSE</th>
+                    <th>EXT RMSE</th>
+                    <th>AGR RMSE</th>
+                    <th>CON RMSE</th>
+                </tr>
+                <tr class="baseline">
+                    <td>Baseline</td>
+                    <td id="agegroup">0.59</td>
+                    <td id="gender">0.59</td>
+                    <td id="open">0.65</td>
+                    <td id="neurotic">0.80</td>
+                    <td id="extrovert">0.79</td>
+                    <td id="agreeable">0.67</td>
+                    <td id="conscientious">0.73</td>
+                </tr>
+    
+                <tr class="ensemble"><td>Ensemble</td><td>0.616</td><td>0.844</td><td>0.770</td><td>0.828</td><td>0.852</td><td>0.759</td><td>0.810</td></tr>
+                <tr><td>Team 1</td><td colspan="7" class="error">Error: FileNotFoundError: [Errno 2] No such file or directory: 'best_model.pth'</td></tr>
+                <tr><td>Team 2</td><td>0.640</td><td>0.770</td><td>0.660</td><td>0.850</td><td>0.920</td><td>0.770</td><td>0.740</td></tr>
+                <tr><td>Team 3</td><td>0.590</td><td>0.590</td><td>0.650</td><td>0.800</td><td>0.790</td><td>0.670</td><td>0.740</td></tr>
+                <tr><td>Team 4</td><td colspan="7" class="error">Error: ModuleNotFoundError: No module named 'sentence_transformers'</td></tr>
+                <tr><td>Team 5</td><td>0.640</td><td>0.840</td><td>0.630</td><td>0.790</td><td>0.770</td><td>0.660</td><td>0.720</td></tr>
+                <tr><td>Team 6</td><td>0.510</td><td>0.630</td><td>0.640</td><td>0.790</td><td>0.780</td><td>0.660</td><td>0.730</td></tr>
+                <tr><td>Team 7</td><td>0.730</td><td>0.850</td><td>0.620</td><td>0.780</td><td>0.770</td><td>0.660</td><td>0.720</td></tr>
+                <tr><td>Team 8</td><td>0.590</td><td>0.840</td><td>0.670</td><td>0.800</td><td>0.800</td><td>0.690</td><td>0.750</td></tr>
+            </table>
+            
                 <table>
                 <tr class="day"><td colspan="8"> Dec 2</td></tr>
                 <tr>
