--- a/mlevals/week10.html
+++ b/mlevals/week10.html
@@ -103,7 +103,40 @@
                 <div class="week-number">Week 10</div>
             </div>
 
-
+                <table>
+                <tr class="day"><td colspan="8"> Dec 5</td></tr>
+                <tr>
+                    <th>Team</th>
+                    <th>Age Accuracy</th>
+                    <th>Gender Accuracy</th>
+                    <th>OPN RMSE</th>
+                    <th>NEU RMSE</th>
+                    <th>EXT RMSE</th>
+                    <th>AGR RMSE</th>
+                    <th>CON RMSE</th>
+                </tr>
+                <tr class="baseline">
+                    <td>Baseline</td>
+                    <td id="agegroup">0.59</td>
+                    <td id="gender">0.59</td>
+                    <td id="open">0.65</td>
+                    <td id="neurotic">0.80</td>
+                    <td id="extrovert">0.79</td>
+                    <td id="agreeable">0.67</td>
+                    <td id="conscientious">0.73</td>
+                </tr>
+    
+                <tr class="ensemble"><td>Ensemble</td><td>0.594</td><td>0.873</td><td>0.767</td><td>0.825</td><td>0.849</td><td>0.758</td><td>0.809</td></tr>
+                <tr><td>Team 1</td><td>0.710</td><td>0.900</td><td>0.650</td><td>0.800</td><td>0.790</td><td>0.670</td><td>0.730</td></tr>
+                <tr><td>Team 2</td><td>0.640</td><td>0.770</td><td>0.660</td><td>0.850</td><td>0.920</td><td>0.770</td><td>0.740</td></tr>
+                <tr><td>Team 3</td><td>0.590</td><td>0.590</td><td>0.660</td><td>0.810</td><td>0.800</td><td>0.680</td><td>0.750</td></tr>
+                <tr><td>Team 4</td><td colspan="7" class="error">Error loading image model: [Errno 2] Unable to synchronously open file</td></tr>
+                <tr><td>Team 5</td><td>0.670</td><td>0.820</td><td>0.640</td><td>0.800</td><td>0.780</td><td>0.670</td><td>0.730</td></tr>
+                <tr><td>Team 6</td><td>0.590</td><td>0.500</td><td>0.650</td><td>0.800</td><td>0.790</td><td>0.670</td><td>0.730</td></tr>
+                <tr><td>Team 7</td><td>0.730</td><td>0.850</td><td>0.620</td><td>0.780</td><td>0.770</td><td>0.660</td><td>0.720</td></tr>
+                <tr><td>Team 8</td><td>0.590</td><td>0.840</td><td>0.670</td><td>0.800</td><td>0.800</td><td>0.690</td><td>0.750</td></tr>
+            </table>
+            
                 <table>
                 <tr class="day"><td colspan="8"> Dec 3</td></tr>
                 <tr>
